# wallet_service

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_01_15_1643-425be0562feb_pre_initial_migrations.py  2025_01_23_1829-7dec0abb0704_initial_migrations.py
app/api/: crud.py  router.py
app/core/: config.py  db.py  rabbitmq.py
app/models/: base_model.py  wallet_model.py
app/schemas/: wallet_schemas.py
tests/: test.py
